# sailjail

./: .gitignore  APPDEBUG.md  BUILDING.md  COPYING  Makefile  README  README.md  meson.build  meson_options.txt  sailjail-plugin.pc.in
daemon/: .depend  Makefile  Makefile.inc  README  README.md  appinfo.c  appinfo.h  applications.c  applications.h  appservices.c  appservices.h  config.c  config.h  control.c  control.h  dataflow.dot  depend_filter.py  desktop_data.c  later.c  later.h  logging.c  logging.h  mainloop.c  mainloop.h  meson.build  migrator.c  migrator.h  permissions.c  permissions.h  prompter.c  prompter.dot  prompter.h  sailjailclient.c  sailjaild.c  sailjaild.dot  service.c  service.h  session.c  session.h  settings.c  (+7 more)
daemon/conf/: user-grantlist.conf
daemon/dbus/: sailjaild.conf
daemon/systemd/: sailjaild.service
daemon/test/: Makefile  meson.build  sailjailclient_wrapper.c  sailjailclient_wrapper.h  test_appinfo.c  test_permissions.c  test_sailjailclient.c  test_settings.c  test_stringset.c  test_util.c  tests.xml.in
daemon/test/data/: keyfile1.ini  keyfile2.ini  user-1000.settings
daemon/test/sailjail/applications/: default-app.desktop  disabled-app.desktop  exec-test1.desktop  exec-test2.desktop  invalid-app.desktop  test-app.desktop
include/: jail_launch_hook.h  jail_launch_hook_impl.h  jail_plugin.h  jail_plugin_impl.h  jail_plugin_module.h  jail_plugin_module_impl.h  jail_rules.h  jail_types.h  jail_version.h
permissions/: Accounts.permission  Ambience.permission  AppLaunch.permission  ApplicationInstallation.permission  Audio.permission  Base.permission  Base.profile  Bluetooth.permission  Calendar.permission  Camera.permission  Connman.permission  Contacts.permission  DataStorages.permission  Documents.permission  Downloads.permission  EMail.permission  Email.permission  FingerprintSensor.permission  Internet.permission  Location.permission  MediaIndexing.permission  Messages.permission  Microphone.permission  Mozilla.permission  Music.permission  Notes.permission  Notifications.permission  Phone.permission  Pictures.permission  Privileged.permission  SailfishApp.profile  Sensors.permission  Sharing.permission  SyncFW.permission  Thumbnails.permission  Tracker.permission  UDisks.permission  Videos.permission  jolla-calculator.profile  jolla-calendar.profile  (+9 more)
rpm/: sailjail.spec
src/: jail_conf.c  jail_conf.h  jail_creds.c  jail_creds.h  jail_free.c  jail_free.h  jail_launch.c  jail_launch.h  jail_launch_hook.c  jail_launch_hook_p.h  jail_plugin.c  jail_plugin_p.h  jail_plugins.c  jail_plugins.h  jail_rules.c  jail_rules_p.h  jail_run.c  jail_run.h  jail_types_p.h  sailjail.c  sailjail.map
tools/: measure_launch_time.py
unit/: Makefile
unit/common/: Makefile  test_common.c  test_common.h
unit/coverage/: run
unit/test_conf/: Makefile  test_conf.c
unit/test_creds/: Makefile  test_creds.c
unit/test_launch/: Makefile  test_launch.c
unit/test_launch_hook/: Makefile  test_launch_hook.c
unit/test_rules/: Makefile  test_rules.c
